--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.7",
     "@reduxjs/toolkit": "^1.8.5",
+    "@types/js-cookie": "^3.0.2",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.0.0",
+    "js-cookie": "^3.0.1",
     "notistack": "^2.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.38.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "6"
   },
